@@ -1,6 +1,7 @@
 package ru.practicum.explorewithme.main.web.pub;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -29,7 +30,7 @@ public class CompilationController {
         return service.findEventsCompilations(pinned, from, size)
             .stream()
             .map(mapper::toDto)
-            .toList();
+            .collect(Collectors.toList());
     }
 
     @GetMapping("/{id}")
